fixed jumping issue when navbar changes and added some padding to h3 in banner.

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -30,6 +30,7 @@
   object-fit: cover;
 }
 
+
 @media (max-width: 768px) {
   /* For a screen < 720px, this CSS will be read */
   .home-banner{
@@ -38,6 +39,7 @@
     background-size: cover;
     margin: 2vh 0vw 0vh 0vw;
     width: 100%;
+    height: 50vh;
   }
 
   .home-banner-text h1{
@@ -51,6 +53,7 @@
     max-width: 100%;
     color: white;
     padding-left: 6vw;
+    padding-right: 4vw;
     font-size: 2rem;
   }
   .home-banner-image{
