--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -16,7 +16,7 @@
 }
 
 .button-div{
-  padding: 60px 0px 0px 0px;
+  padding-top: 6vh;
 }
 
 .button-banner{
